--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "entryPagePath": "pages/excel/excel",
+  "entryPagePath": "pages/index/index",
     "pages": [
         "pages/index/index",
         "pages/device/device",
